--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,27 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# ===============================
+# POSTGRES PARA RENDER
+# ===============================
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+# ===============================
+# THYMELEAF
+# ===============================
 
 spring.thymeleaf.cache=false
+
+# ===============================
+# PUERTO PARA RENDER
+# ===============================
+
+server.port=${PORT:8080}
