--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # ===============================
-# POSTGRES PARA RENDER
+# BASE DE DATOS LOCAL (MySQL)
 # ===============================
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Holaandy2209.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
 # JPA / HIBERNATE
@@ -13,6 +13,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ===============================
 # THYMELEAF
@@ -21,7 +22,7 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 # ===============================
-# PUERTO PARA RENDER
+# PUERTO
 # ===============================
 
-server.port=${PORT:8080}
+server.port=8080
