--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,24 @@
 # ===============================
-# BASE DE DATOS LOCAL (MySQL)
+# DATABASE (Render PostgreSQL)
 # ===============================
-
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Holaandy2209.
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ===============================
 # THYMELEAF
 # ===============================
-
 spring.thymeleaf.cache=false
 
 # ===============================
-# PUERTO
+# SERVER
 # ===============================
-
-server.port=8080
+server.port=${PORT:8080}
